tests/expected/semant13.semant.err
semant13.usc:4:6: error: a is not an array
    a[0] = 1;
     ^
1 Error(s)
